--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,10 @@
 span{
   color: black;
 }
+@media only screen and (max-width: 600px) {
+  .alert{
+    width: 100% !important; 
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
